Working module added for all

--- a/SMSGateway/appsettings.json
+++ b/SMSGateway/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-ERHMGJU9\\SQLEXPRESS; User ID=sa; Password=Raju@12345; Initial Catalog=SmsGateWay; max pool size=500000; MultipleActiveResultSets=true; TrustServerCertificate=True;"
+
+  }
+  
 }
