--- a/SMSGateway/SMSGateway.csproj
+++ b/SMSGateway/SMSGateway.csproj
@@ -17,6 +17,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SMSGateway.Base\SMSGateway.Base.csproj" />
+      <ProjectReference Include="..\SMSGateway.Managers\SMSGateway.Managers.csproj" />
+      <ProjectReference Include="..\SMSGateway.Repositories\SMSGateway.Repositories.csproj" />
       <ProjectReference Include="..\SMS\SMS.csproj" />
     </ItemGroup>
 
